--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.18",
     "clsx": "^2.1.0",
+    "express": "^4.19.2",
     "framer-motion": "^11.0.18",
+    "mongoose": "^8.2.3",
     "postcss": "^8.4.35",
     "preact": "^10.19.6",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
