--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.18",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "express": "^4.19.2",
     "framer-motion": "^11.0.18",
@@ -26,8 +27,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
