--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,12 +23,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
+    "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
