--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.8",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "express": "^4.19.2",
     "framer-motion": "^11.0.18",
@@ -20,9 +22,11 @@
     "postcss": "^8.4.35",
     "preact": "^10.19.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.4",
     "sweetalert2": "^11.10.7",
     "tailwindcss": "^3.4.3"
   },
